change sound play to accepted response instead of ok
