# api/swagger.json
@@ -129,8 +129,8 @@
                     }
                 ],
                 "responses": {
-                    "200": {
-                        "description": "OK",
+                    "202": {
+                        "description": "Accepted",
                         "schema": {
                             "$ref": "#/definitions/routes.SoundSuccessfulPlayResponse"
                         }
